R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_svg-icon.scss
.svg-icon {

	svg {
		display: inline-block;
		height: auto;
		vertical-align: baseline;
		width: 100%;
	}
}

$icon-size-base: 1rem;

$icon-sizes: (
	"1": $icon-size-base / 2,
	"2": $icon-size-base,
	"3": $icon-size-base * 1.5,
	"4": $icon-size-base * 2,
	"5": $icon-size-base * 3
);

@each $name, $size in $icon-sizes {
	.dw-icon-size-#{$name},
	.dw-icon-size-#{$name} svg {
		height: $size;
		width: $size;
	}
}

